# mutobj

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
benchmarks/: README.md  bench_descriptor.py
doc/: guide.md
doc/api/: reference.md
doc/specs/: design-pyic-project.md
docs/: guide.md  migration-guide.md  testing-methodology.md
docs/api/: reference.md
docs/archive/: 2026-02-16-refactor-project-rename.md  2026-02-24-feature-discover-subclasses.md  2026-03-04-feature-impl-super.md  2026-03-09-bugfix-pyright-type-errors.md  2026-03-12-bugfix-subclass-attribute-override.md  2026-03-12-feature-positional-init.md  2026-03-12-refactor-private-method-registration.md  2026-04-03-feature-safe-subset.md  2026-04-17-bugfix-init-default-values.md  2026-04-21-feature-class-level-attr-assignment.md  2026-04-21-refactor-extension-setattr.md  2026-04-23-feature-declaration-static-type-support.md  2026-04-24-bugfix-impl-dunder-target-misbinding.md  2026-04-25-feature-init-stub-ide-warning.md  2026-04-25-feature-post-init-no-stub.md  2026-05-09-feature-class-level-attribute-support.md  2026-05-15-feature-field-reflection-api.md  2026-05-18-feature-impl-has-semantics.md  2026-05-18-feature-impl-meta.md  2026-05-18-feature-mutobj-lint.md  2026-05-19-feature-mutobj-lint-default-path.md  2026-05-19-feature-mutobj-lint-iter1.md  2026-05-19-feature-mutobj-lint-iter2.md  2026-05-27-refactor-core-module-split.md  2026-05-28-feature-implementation-api-refinement.md  2026-05-28-refactor-unified-attribute-descriptor.md  2026-06-09-refactor-slots-field-storage.md  2026-06-12-refactor-class-strict-declaration.md  2026-06-16-refactor-lint-pytest-runtime.md  2026-06-17-feature-typecheck-friendly-metaclass-setattr.md
docs/design/: architecture.md  type-spec.md
docs/postmortems/: 2026-03-08-extension-redesign-process.md  2026-04-14-mutscript-boundary-redesign.md
docs/specifications/: bugfix-impl-dunder-target-misbinding.md  bugfix-impl-inheritance-collision.md  design-mutobj-project.md  feature-attribute-defaults.md  feature-class-level-attr-assignment.md  feature-default-impl.md  feature-extension-redesign.md  feature-impl-has-semantics.md  feature-impl-introspection-and-descriptor-meta.md  feature-impl-meta.md  feature-impl-super.md  feature-implementation-class.md  feature-mutobj-lint-iter3.md  feature-positional-init.md  refactor-class-strict-declaration.md  refactor-declaration-field-completeness.md  refactor-extension-implementation-strict.md  refactor-impl-non-declaration-guard.md  refactor-impl-protected-access.md  refactor-private-method-registration.md
src/mutobj/: __init__.py  core.py
src/mutobj/_testing/: __init__.py
src/mutobj/core/: __init__.py  _classmeta.py  _constants.py  _declaration.py  _discovery.py  _extensions.py  _fields.py  _implementation.py  _impls.py  _properties.py  _reload.py  _state.py  _typing_utils.py
src/mutobj/lint/: __init__.py  __main__.py  _api.py  _helpers.py  _r001.py  _r002.py  _r003.py  _r004.py  _resolver.py  _rules.py
src/pyic/: __init__.py  core.py
tests/: __init__.py  test_basic.py  test_class_namespace_strict.py  test_class_setattr.py  test_classmethod_staticmethod.py  test_classvar.py  test_declaration_doc.py  test_declaration_field_completeness.py  test_defaults.py  test_discover.py  test_dunder_impl.py  test_extension.py  test_impl.py  test_impl_chain.py  test_impl_declaration_guard.py  test_impl_meta.py  test_impl_super.py  test_implementation.py  test_inheritance.py  test_introspection_api.py  test_lint.py  test_object.py  test_positional_init.py  test_post_init.py  test_property.py  test_reload.py  test_resolve_class.py  test_typing_utils.py  test_unregister.py
tests/test_lint/: _helpers.py  test_check_api.py  test_cli.py  test_core.py  test_dogfooding.py  test_r001.py  test_r002.py  test_r003.py  test_r004.py
tests/type_check/: test_pyright.py
tests/type_check/expected_errors/: declaration_field_errors.py  extension_field_errors.py  implementation_field_errors.py
tests/type_check/fixtures/: 01_repro.py  02_extension.py  03_field_reflection.py  04_implementation.py
