[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutobj"
version = "0.9.999"
description = "Mutable Object Declaration - 支持声明与实现分离的类定义库"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "mutobj contributors"}
]
keywords = ["interface", "class", "separation", "declaration", "implementation", "extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.scripts]
mutobj-lint = "mutobj.lint.__main__:main"

[project.urls]
Homepage = "https://github.com/tiwb/mutobj"
Documentation = "https://github.com/tiwb/mutobj#readme"
Repository = "https://github.com/tiwb/mutobj"
Issues = "https://github.com/tiwb/mutobj/issues"

[project.optional-dependencies]
dev = [
    "pyperf>=2.0",
    "pyright>=1.1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mutobj = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "l2(contract): L2 契约测试，验证内部状态机 / 失效时机 / 回退路径",
]

[tool.coverage.run]
source = ["src/mutobj"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.json]
show_contexts = true

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
extraPaths = ["src"]
typeCheckingMode = "strict"
reportFunctionMemberAccess = false

[tool.mutobj-lint]
include = ["src"]
